[package]
name = "scan-rs"
version = "0.1.0"
authors = ["gwenn"]
description = "Streaming scanner"
#documentation = "http://docs.rs/scan-rs"
repository = "https://github.com/gwenn/scan-rs"
#readme = "README.md"
#categories = ["parser-implementations"]
keywords = ["scanner", "tokenizer"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.3"
