[package]
name = "scan-rs"
version = "0.1.0"
authors = ["gwenn"]
description = "Streaming scanner"
#documentation = "http://docs.rs/scan-rs"
repository = "https://github.com/gwenn/scan-rs"
#readme = "README.md"
#categories = ["parser-implementations"]
keywords = ["scanner", "tokenizer"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.3"
memchr = "2.0"
unicase = "1.4"

[dependencies.phf]
version = "0.7"
features = ["unicase"]

[dependencies.phf_macros]
version = "0.7"
features = ["unicase_support"]